added button for modal window (css / html)

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
                 <i class="fas fa-trash"></i>
             </li>
         </ul>
+        <div class="todoList__button">
+            <a href="#" class="button" role="button">
+                Add todo
+            </a>
+        </div>
     </div>
 </div>
 
