--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                     <span class="check"></span>
                    Drink coffe
                 </label>
-                <i class="fas fa-trash"></i>
+                <i class="fas fa-pen-square edit"></i>
+                <i class="fas fa-trash delete"></i>
             </li>
             <li>
                 <input type="checkbox" id="todo_2">
@@ -27,7 +28,8 @@
                     <span class="check"></span>
                     Eat chocolate
                 </label>
-                <i class="fas fa-trash"></i>
+                <i class="fas fa-pen-square edit"></i>
+                <i class="fas fa-trash delete"></i>
             </li>
             <li>
                 <input type="checkbox" id="todo_3">
@@ -35,7 +37,8 @@
                     <span class="check"></span>
                     Be happy
                 </label>
-                <i class="fas fa-trash"></i>
+                <i class="fas fa-pen-square edit"></i>
+                <i class="fas fa-trash delete"></i>
             </li>
         </ul>
         <div class="todoList__button">
