added add_list modal window

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
             </a>
         </div>
     </div>
+    <div class="todoList__modal">
+        <form class="todoList__modal__form">
+            <input type="text" name="add" placeholder="Add todo">
+            <div class="todoList__modal__form_buttons">
+                <a href="#0" class="add-todo">
+                    <i class="fas fa-plus add"></i>
+                </a>
+            </div>
+        </form>
+    </div>
 </div>
 
 <script src="dist/bundle.js"></script>
