added and save new value button js and html file

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
             </div>
         </form>
     </div>
+    <div class="todoList__modal edit__modal">
+        <form class="todoList__modal__form">
+            <input type="text" name="add" placeholder="Added todo" maxlength="15" id = "edit__modal-input">
+            <div class="todoList__modal__form_buttons">
+                <a href="#0" class="added-todo">
+                    <i class="fas fa-check"></i>
+                </a>
+            </div>
+        </form>
+    </div>
 </div>
 
 
