--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 <div class="todoList">
+
+    <!--  TodoList content  -->
+
     <div class="todoList__img"></div>
     <div class="todoList__content">
         <ul class="todoList__content__inner">
@@ -47,6 +50,9 @@
             </a>
         </div>
     </div>
+
+     <!-- TodoList modal  ADD  -->
+
     <div class="todoList__modal add__modal">
         <form class="todoList__modal__form">
             <input type="text" name="add" placeholder="Add todo" maxlength="15">
@@ -57,6 +63,11 @@
             </div>
         </form>
     </div>
+
+
+    <!-- TodoList modal  EDIT  -->
+
+
     <div class="todoList__modal edit__modal">
         <form class="todoList__modal__form">
             <input type="text" name="add" placeholder="Added todo" maxlength="15" id = "edit__modal-input">
